@@ -1,6 +1,12 @@
-2012-09-10 Build User <jenkins@coast-project.org>
+2012-09-17 Build User <jenkins@coast-project.org>
 
       
+      PKGBUILD prepared for new jenkins-ci version 1.482
+
+
+2012-09-10 Build User <jenkins@coast-project.org>
+
+      jenkins-ci-1.481-1:
       PKGBUILD prepared for new jenkins-ci version 1.481
 
 
